--- a/environment.yml
+++ b/environment.yml
@@ -388,5 +388,185 @@ dependencies:
     - streamlit==0.86.0
     - tzlocal==2.1
     - validators==0.18.2
-    - yfinance==0.1.63
+    - yfinance==0.1.63  
+    - bitarray==1.9.2=py38h2bbff1b_1
+    - hdf5==1.10.4=h7ebc959_0
+    - pyrsistent==0.17.3=py38he774522_0
+    - distributed==2021.4.0=py38haa95532_0
+    - jpeg==9b=hb83a4c4_2
+    - win_unicode_console==0.5=py38_0
+    - console_shortcut==0.1.1=4
+    - mkl_random==1.2.1=py38hf11a4ad_2
+    - spyder==4.2.5=py38haa95532_0
+    - lerc==2.2.1=hd77b12b_0
+    - pysocks==1.7.1=py38haa95532_0
+    - conda    -build==3.21.4=py38haa95532_0
+    - scipy==1.6.2=py38h66253e8_1
+    - vc==14.2=h21ff451_1
+    - msys2    -conda    -epoch==20160418=1
+    - anyio==2.2.0=py38haa95532_2
+    - charls==2.2.0=h6c2663c_0
+    - pandoc==2.12=haa95532_0
+    - pip==21.0.1=py38haa95532_0
+    - pluggy==0.13.1=py38haa95532_0
+    - conda==4.10.3=py38haa95532_0
+    - bzip2==1.0.8=he774522_0
+    - cytoolz==0.11.0=py38he774522_0
+    - libprotobuf==3.17.2=h23ce68f_1
+    - pywin32    -ctypes==0.2.0=py38_1000
+    - lcms2==2.12=h83e58a3_0
+    - yaml==0.2.5=he774522_0
+    - pkginfo==1.7.0=py38haa95532_0
+    - gevent==21.1.2=py38h2bbff1b_1
+    - statsmodels==0.12.2=py38h2bbff1b_0
+    - psutil==5.8.0=py38h2bbff1b_1
+    - ca    -certificates==2021.4.13=haa95532_1
+    - regex==2021.4.4=py38h2bbff1b_0
+    - brotli==1.0.9=ha925a31_2
+    - pillow==8.2.0=py38h4fa10fc_0
+    - kiwisolver==1.3.1=py38hd77b12b_0
+    - absl    -py==0.13.0=py38haa95532_0
+    - menuinst==1.4.16=py38he774522_1
+    - setuptools==52.0.0=py38haa95532_0
+    - greenlet==1.0.0=py38hd77b12b_2
+    - scikit    -image==0.18.1=py38hf11a4ad_0
+    - comtypes==1.1.9=py38haa95532_1002
+    - giflib==5.2.1=h62dcd97_0
+    - mistune==0.8.4=py38he774522_1000
+    - terminado==0.9.4=py38haa95532_0
+    - py    -lief==0.10.1=py38ha925a31_0
+    - pywavelets==1.1.1=py38he774522_2
+    - astropy==4.2.1=py38h2bbff1b_1
+    - pywin32==227=py38he774522_1
+    - vs2015_runtime==14.27.29016=h5e58377_2
+    - pyodbc==4.0.30=py38ha925a31_0
+    - pytest==6.2.3=py38haa95532_2
+    - lzo==2.10=he774522_2
+    - bottleneck==1.3.2=py38h2a96729_1
+    - libarchive==3.4.2=h5e25573_0
+    - protobuf==3.17.2=py38hd77b12b_0
+    - bokeh==2.3.2=py38haa95532_0
+    - msgpack    -python==1.0.2=py38h59b6b97_1
+    - liblief==0.10.1=ha925a31_0
+    - mkl==2021.2.0=haa95532_296
+    - icc_rt==2019.0.0=h0cc432a_1
+    - ipython==7.22.0=py38hd4e2768_0
+    - h5py==2.10.0=py38h5e291fa_0
+    - watchdog==1.0.2=py38haa95532_1
+    - conda    -package    -handling==1.7.3=py38h8cc25b3_1
+    - libxslt==1.1.34=he774522_0
+    - tenacity==6.3.1=py38haa95532_0
+    - libpng==1.6.37=h2a8f88b_0
+    - m2w64    -gcc    -libgfortran==5.3.0=6
+    - pycurl==7.43.0.6=py38h7a1dbc1_0
+    - pandocfilters==1.4.3=py38haa95532_1
+    - icu==58.2=ha925a31_3
+    - m2w64    -gcc    -libs    -core==5.3.0=7
+    - m2w64    -libwinpthread    -git==5.0.0.4634.697f757=2
+    - notebook==6.3.0=py38haa95532_0
+    - pyzmq==20.0.0=py38hd77b12b_1
+    - pytables==3.6.1=py38ha5be198_0
+    - fastcache==1.1.0=py38he774522_0
+    - libssh2==1.9.0=h7a1dbc1_1
+    - xlwings==0.23.0=py38haa95532_0
+    - bcrypt==3.2.0=py38he774522_0
+    - imagecodecs==2021.3.31=py38h5da4933_0
+    - cython==0.29.23=py38hd77b12b_0
+    - pycosat==0.6.3=py38h2bbff1b_0
+    - sip==4.19.13=py38ha925a31_0
+    - blosc==1.21.0=h19a0ad4_0
+    - numexpr==2.7.3=py38hb80d3ca_1
+    - pywinpty==0.5.7=py38_0
+    - m2w64    -gcc    -libs==5.3.0=7
+    - sniffio==1.2.0=py38haa95532_1
+    - brotlipy==0.7.0=py38h2bbff1b_1003
+    - libzopfli==1.0.3=ha925a31_0
+    - pathlib2==2.3.5=py38haa95532_2
+    - tensorflow    -base==2.3.0=eigen_py38h75a453f_0
+    - zfp==0.5.5=hd77b12b_6
+    - astor==0.8.1=py38haa95532_0
+    - libcurl==7.71.1=h2a8f88b_1
+    - cffi==1.14.5=py38hcd4344a_0
+    - ujson==4.0.2=py38hd77b12b_0
+    - intel    -openmp==2021.2.0=haa95532_616
+    - numpy    -base==1.20.1=py38haf7ebc8_0
+    - pylint==2.7.4=py38haa95532_1
+    - pyqt==5.9.2=py38ha925a31_4
+    - tbb==2020.3=h74a9793_0
+    - sqlite==3.35.4=h2bbff1b_0
+    - tensorflow==2.3.0=mkl_py38h37f7ee5_0
+    - libdeflate==1.7=h2bbff1b_5
+    - matplotlib    -base==3.3.4=py38h49ac443_0
+    - lz4    -c==1.9.3=h2bbff1b_0
+    - powershell_shortcut==0.0.1=3
+    - tornado==6.1=py38h2bbff1b_0
+    - chardet==4.0.0=py38haa95532_1003
+    - coverage==5.5=py38h2bbff1b_2
+    - tk==8.6.10=he774522_0
+    - jupyter_core==4.7.1=py38haa95532_0
+    - libtiff==4.2.0=hd0e1b90_0
+    - mkl    -service==2.3.0=py38h2bbff1b_1
+    - scikit    -learn==0.24.1=py38hf11a4ad_0
+    - win_inet_pton==1.1.0=py38haa95532_0
+    - certifi==2020.12.5=py38haa95532_0
+    - winpty==0.4.3=4
+    - lxml==4.6.3=py38h9b66d53_0
+    - curl==7.71.1=h2a8f88b_1
+    - sqlalchemy==1.4.7=py38h2bbff1b_0
+    - libsodium==1.0.18=h62dcd97_0
+    - lazy    -object    -proxy==1.6.0=py38h2bbff1b_0
+    - pyjwt==2.1.0=py38haa95532_0
+    - openssl==1.1.1k=h2bbff1b_0
+    - rtree==0.9.7=py38h2eaa2aa_1
+    - krb5==1.18.2=hc04afaa_0
+    - freetype==2.10.4=hd328e21_0
+    - snappy==1.1.8=h33f27b4_0
+    - pynacl==1.4.0=py38h62dcd97_1
+    - numpy==1.20.1=py38h34a8a5c_0
+    - matplotlib==3.3.4=py38haa95532_0
+    - numba==0.53.1=py38hf11a4ad_0
+    - qt==5.9.7=vc14h73c81de_0
+    - importlib    -metadata==3.10.0=py38haa95532_0
+    - xz==5.2.5=h62dcd97_0
+    - libiconv==1.15=h1df5818_7
+    - llvmlite==0.36.0=py38h34b8924_4
+    - pyerfa==1.7.3=py38h2bbff1b_0
+    - locket==0.2.1=py38haa95532_1
+    - cryptography==3.4.7=py38h71e12ea_0
+    - get_terminal_size==1.0.0=h38e98db_0
+    - ruamel_yaml==0.15.100=py38h2bbff1b_0
+    - grpcio==1.36.1=py38hc60d5dd_1
+    - six==1.15.0=py38haa95532_0
+    - zeromq==4.3.3=ha925a31_3
+    - libxml2==2.9.10=hb89e7f3_3
+    - mpmath==1.2.1=py38haa95532_0
+    - jedi==0.17.2=py38haa95532_1
+    - python==3.8.8=hdbf39b2_5
+    - wincertstore==0.2=py38_0
+    - argon2    -cffi==20.1.0=py38h2bbff1b_1
+    - zope.interface==5.3.0=py38h2bbff1b_0
+    - markupsafe==1.1.1=py38he774522_0
+    - typed    -ast==1.4.2=py38h2bbff1b_1
+    - zstd==1.4.5=h04227a9_0
+    - zlib==1.2.11=h62dcd97_4
+    - libaec==1.0.4=h33f27b4_1
+    - libspatialindex==1.9.3=h6c2663c_0
+    - keyring==22.3.0=py38haa95532_0
+    - pyreadline==2.1=py38_1
+    - termcolor==1.1.0=py38haa95532_1
+    - markdown==3.3.4=py38haa95532_0
+    - openjpeg==2.3.0=h5ec785f_1
+    - jupyter_server==1.4.1=py38haa95532_0
+    - mkl_fft==1.3.0=py38h277e83a_2
+    - pandas==1.2.4=py38hd77b12b_0
+    - m2w64    -gmp==6.1.0=2
+    - sympy==1.8=py38haa95532_0
+    - wrapt==1.12.1=py38he774522_1
+    - spyder    -kernels==1.10.2=py38haa95532_0
+    - astroid==2.5=py38haa95532_1
+    - path==15.1.2=py38haa95532_0
+    - pyyaml==5.4.1=py38h2bbff1b_1
+    - blinker==1.4=py38haa95532_0
+    - docutils==0.17=py38haa95532_1
+
 prefix: C:\Users\obaris\Anaconda3
